--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,17 @@
 [versions]
+confluent = "7.3.1"
+kafka = "3.3.2"
 kotlin = "1.8.10"
 kotest = "5.5.5"
 
 [libraries]
+logback = { module = "ch.qos.logback:logback-classic", version = "1.4.5" }
+jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version = "2.14.2" }
+kafka-clients = { module = "org.apache.kafka:kafka-clients", version.ref = "kafka"}
+kafka-connect = { module = "org.apache.kafka:connect-runtime", version.ref = "kafka"}
+kafka-json = { module = "io.confluent:kafka-json-serializer", version.ref = "confluent"}
+kafka-streams = { module = "org.apache.kafka:kafka-streams", version.ref = "kafka"}
+kafka-streams-json-serde = { module = "io.confluent:kafka-streams-json-schema-serde", version.ref = "confluent"}
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 kotest-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
@@ -15,3 +24,4 @@ kotlin-testing = ["kotest-junit5", "kotest-assertions-core", "kotest-assertions-
 dokka = { id ="org.jetbrains.dokka", version = "1.7.20" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-qa = { id = "org.danilopianini.gradle-kotlin-qa", version = "0.33.0" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
