--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -106,6 +106,7 @@ jobs:
           context: .
           push: true
           tags: ${{ steps.full-image-name.outputs.image-name }}:latest, ${{ steps.full-image-name.outputs.image-name }}:${{ needs.release.outputs.release-version }}
+
   documentation-deploy:
     needs:
       - release
@@ -129,7 +130,39 @@ jobs:
           destination_dir: kdoc
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
-          commit_message: 'docs: update documentation'
+          commit_message: 'docs: update project documentation'
+
+  async-api-deploy:
+    needs:
+      - release
+    if: needs.release.outputs.release-status == 'released'
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          fetch-depth: 0
+      - name: Validating AsyncAPI document
+        uses: WaleedAshraf/asyncapi-github-action@v0.0.9
+        with:
+          filepath: docs/api/my-asyncapi.yml
+      - name: Generating HTML from AsyncAPI document
+        uses: docker://asyncapi/github-action-for-generator:2.0.0
+        with:
+          template: '@asyncapi/html-template@0.9.0'
+          filepath: docs/async-api/async-api.yml
+          output: ./build/asyncapi/html
+      - name: Deploy AyncAPI documentation on GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          keep_files: true
+          publish_dir: ./build/asyncapi/html
+          destination_dir: asyncapi
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          commit_message: 'docs: update asyncapi documentation'
+
   success:
     runs-on: ubuntu-22.04
     needs:
@@ -137,6 +170,7 @@ jobs:
       - release
       - docker-image-delivery
       - documentation-deploy
+      - async-api-deploy
     if: >-
       always() && (
         contains(join(needs.*.result, ','), 'failure')
