--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,6 +12,7 @@ on:
   pull_request:
 
 jobs:
+
   validation:
     runs-on: ubuntu-latest
     steps:
@@ -19,6 +20,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Validate the Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1.0.5
+        
   build:
     needs:
       - validation
@@ -44,6 +46,7 @@ jobs:
         uses: codecov/codecov-action@v3.1.1
         with:
           directory: "build/reports/jacoco"
+          
   release:
     concurrency:
         # Allow only one release at a time.
@@ -78,6 +81,7 @@ jobs:
         run: |
           npm install
           npx semantic-release
+          
   docker-image-delivery:
     needs:
       - release
@@ -135,6 +139,7 @@ jobs:
   async-api-deploy:
     needs:
       - release
+    runs-on: ubuntu-latest
     if: needs.release.outputs.release-status == 'released'
     steps:
       - name: Checkout the repository
