--- a/docs/async-api/async-api.yml
+++ b/docs/async-api/async-api.yml
@@ -1,3 +1,7 @@
-asyncapi: 2.5.0
+asyncapi: 2.0.0
 info:
   title: Digital Twins Event Gateway
+  description: The Gateway between Azure Digital Twins and the application microservices.
+  license:
+    name: MIT
+    url: https://opensource.org/licenses/MIT
