--- a/docs/async-api/async-api.yml
+++ b/docs/async-api/async-api.yml
@@ -1,6 +1,7 @@
 asyncapi: 2.0.0
 info:
   title: Digital Twins Event Gateway
+  version: '1.0.0'
   description: The Gateway between Azure Digital Twins and the application microservices.
   license:
     name: MIT
