--- a/docs/async-api/async-api.yml
+++ b/docs/async-api/async-api.yml
@@ -1,8 +1,24 @@
-asyncapi: 2.0.0
+asyncapi: 2.6.0
 info:
   title: Digital Twins Event Gateway
-  version: '1.0.0'
+  version: 1.0.0
   description: The Gateway between Azure Digital Twins and the application microservices.
-  license:
-    name: MIT
-    url: https://opensource.org/licenses/MIT
+
+channels:
+  user/signedup:
+    subscribe:
+      message:
+        $ref: '#/components/messages/UserSignedUp'
+components:
+  messages:
+    UserSignedUp:
+      payload:
+        type: object
+        properties:
+          displayName:
+            type: string
+            description: Name of the user
+          email:
+            type: string
+            format: email
+            description: Email of the user
