--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ kotlin = "1.8.10"
 kotest = "5.5.5"
 
 [libraries]
+archunit = { module = "com.tngtech.archunit:archunit-junit5", version = "1.0.1" }
 logback = { module = "ch.qos.logback:logback-classic", version = "1.4.5" }
 jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version = "2.14.2" }
 kafka-clients = { module = "org.apache.kafka:kafka-clients", version.ref = "kafka"}
@@ -20,7 +21,7 @@ reactivex = { module = "io.reactivex.rxjava3:rxkotlin", version = "3.0.1" }
 signalr = { module = "com.microsoft.signalr:signalr", version = "7.0.3" }
 
 [bundles]
-kotlin-testing = ["kotest-junit5", "kotest-assertions-core", "kotest-assertions-core-jvm"]
+kotlin-testing = ["archunit","kotest-junit5", "kotest-assertions-core", "kotest-assertions-core-jvm"]
 
 [plugins]
 dokka = { id ="org.jetbrains.dokka", version = "1.7.20" }
