--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -47,16 +47,15 @@ jobs:
         with:
           directory: "build/reports/jacoco"
           
-  release:
+  release-and-delivery:
     concurrency:
         # Allow only one release at a time.
-        group: release-${{ github.event.number || github.ref }}
+        group: release-and-delivery-${{ github.event.number || github.ref }}
     needs:
       - build
     runs-on: ubuntu-latest
     outputs:
       release-status: ${{ env.release_status }}
-      release-version: ${{ env.release_version }}
     # Release only where secrets are available.
     if: >-
       !github.event.repository.fork
@@ -65,57 +64,28 @@ jobs:
         || github.event.pull_request.head.repo.full_name == github.repository
       )
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.DEPLOYMENT_TOKEN }}
-          submodules: recursive
-          fetch-depth: 0
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.DEPLOYMENT_TOKEN }}
-        run: |
-          npm install
-          npx semantic-release
-          
-  docker-image-delivery:
-    needs:
-      - release
-    runs-on: ubuntu-latest
-    if: needs.release.outputs.release-status == 'released'
-    env:
-      REGISTRY: ghcr.io
-      IMAGE_NAME: ${{ github.repository }}
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v3
+      - name: Release and container delivery
+        uses: SmartOperatingBlock/release-and-delivery-action@1.0.0
         with:
-          submodules: recursive
-          fetch-depth: 0
-      - name: Login to GitHub Container registry
-        uses: docker/login-action@v2.1.0
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - id: full-image-name
-        run: echo "image-name=${{env.REGISTRY}}/${{env.IMAGE_NAME}}" | tr '[:upper:]' '[:lower:]' >> $GITHUB_OUTPUT
-      - name: Build and push the image to GitHub Container registry
-        uses: docker/build-push-action@v4.0.0
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.full-image-name.outputs.image-name }}:latest, ${{ steps.full-image-name.outputs.image-name }}:${{ needs.release.outputs.release-version }}
+          should-release: true
+          release-command: |
+            npm install
+            npx semantic-release
+          should-build-and-deliver-container: true
+          container-registry-name: 'ghcr.io'
+          container-registry-username: ${{ github.actor }}
+          container-registry-password: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.DEPLOYMENT_TOKEN }}
 
   documentation-deploy:
     needs:
-      - release
+      - release-and-delivery
     runs-on: ubuntu-latest
-    if: needs.release.outputs.release-status == 'released'
+    if: needs.release-and-delivery.outputs.release-status == 'released'
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
@@ -135,11 +105,10 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
   success:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs:
       - build
-      - release
-      - docker-image-delivery
+      - release-and-delivery
       - documentation-deploy
     if: >-
       always() && (
